# crimson-crab-mcp-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  cargo-generate.toml  smithery.yaml
.github/workflows/: ci.yml
src/: main.rs
